form submission/validation + styling complete

--- a/react-template/src/NotificationForm.css
+++ b/react-template/src/NotificationForm.css
@@ -1,79 +1,121 @@
 * {
-    box-sizing: border-box;
-  }
-  
-  
-  @media (min-width: 700px) {
-    .form {
-      width: 70%;
-    }
-  }
-
-  .notificationPreferece {
-      margin-top:50px;
-  }
-  
-  form p {
-    float: left;
-    width: 49%;
-  }
-  
-  body {
-    padding: 1rem;
-  }
-  
-  .form {
-    background: #fff;
-  }
-  
-  form label {
-    display: block;
-  }
-  
-  button,
-  input,
-  textarea {
-    padding: 1em;
-  }
-  
-  button {
-    background: lightgrey;
-    width: 100%;
-    border: 0;
-  }
-  /* button:hover, button:focus {
-    background: gold;
-    outline: 0;
-  } */
-  .notificationHeader {
-      text-align: center;
-  }
-  
-  .form {
-    max-width: 1170px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 1em;
-  }
-  @media (min-width: 600px) {
-    .form {
-      padding: 0;
-    }
-  }
-  
-  h3,
-  ul {
-    margin: 0;
-  }
-  
-  h3 {
-    margin-bottom: 1rem;
-  }
-  
-  
-  input,
-  textarea,
-  button {
-    width: 100%;
-    border: 1px solid;
-  }
+	border: none;
+	border-radius: 4px;
+	box-sizing: border-box;
+}
+.checkBox {
+	height: 15px;
+	margin: 0;
+	outline: 2px solid #526E7F !important;
+	outline-offset: -1px;
+	padding: 0;
+	position: relative;
+	top: -1px;
+	vertical-align: bottom;
+	width: 15px;
+}
+.checkBoxLabel {
+	display: block;
+	padding-left: 15px;
+	text-indent: -15px;
+}
+.column {
+	float: left;
+	padding-left: 40px;
+	width: 50%;
+}
+.column label {
+	padding-bottom: 15px;
+}
+.dropdown {
+	margin-top: 15px;
+}
+.dropdown, .supervisor {
+	margin-left: 30%;
+}
+.firstRow {
+	padding-top: 30px;
+}
+.form {
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 1170px;
+	padding: 1em;
+}
+.form {
+	background: #fff;
+}
+.notificationHeader {
+	background-color: #526E7F;
+	height: 80px;
+	padding: 0;
+}
+.notificationHeader h1 {
+	color: black;
+	padding-top: 10px;
+	text-align: center;
+}
+.notificationPreference {
+	color: grey;
+	margin-left: 40px;
+	margin-top: 50px;
+}
+.row:after {
+	clear: both;
+	content: "";
+	display: table;
+}
+.supervisor {
+	margin-top: 40px;
+}
+@media (min-width: 600px) {
+	.form {
+		padding: 0;
+	}
+}
+@media (min-width: 700px) {
+	.form {
+		width: 70%;
+	}
+}
+body {
+	padding: 1rem;
+}
+button {
+	background-color: #526E7F;
+	border: none;
+	color: white;
+	cursor: pointer;
+	margin-left: 42%;
+	margin-top: 50px;
+	padding: 0.75em;
+	width: 15%;
+}
+form {
+	background-color: #F4DEEA;
+	margin-top: -22px;
+	padding-bottom: 25px;
+}
+form label {
+	display: block;
+}
+form p {
+	float: left;
+	width: 49%;
+}
+input {
+	color: grey;
+	width: 90%;
+}
+input,
+ select {
+	padding: 0.75em;
+}
+label {
+	color: grey;
+	font-weight: bold;
+}
+select {
+	color: grey;
+	width: 40%;
+}
